   (example\spring\processors\script\script-inspector.xml)
   
 * Added examples for new ISQLWriter implementations in example\spring\connectors\db  
   (xml-table-writer.xml and xml-storedproc-writer.xml)

Miscellaneous
=============

 * Adaptor class has two static utility methods for programmatic invocation of adaptors.
   Simple.java (in example/src/...) demonstrates usage.
   
 * Migration guidelines (draft): www/migration.html  

Bug Fixes
=========

SC48: Transaction rollback when handling exceptions from IWriteConnectors.

SC53: ScriptProcessor fails when used with java 1.6. Symptoms are AbstractMethodErrors being thrown.

3rd Party
=========

 * Upgraded: lib/XmlSchema_1.1.jar 1.4.2.
             lib/commons-httpclient_3.0.1.jar to 3.1.
             lib/commons-lang_2.0.jar to 2.4.
             lib/xfire-all_1.2.3.jar to 1.2.6.
             lib/jetty-6.0.1.jar to 6.1.9 (related change in ServletContainer).
             lib/jetty-util-6.0.1.jar to 6.1.9 (related change in ServletContainer).
             lib/js_1_6R5.jar replaced by js.jar, version 1.6R7 (related changes in build.xml)
 
 * Added (in preparation for support of CXF web service framework):    
             lib/jaxws-api_2.1-1.jar.
             lib/neethi_2.0.4.jar.
             lib/FastInfoset_1.2.2.jar.
             lib/geronimo-annotation_1.0_spec_1.1.1.jar.
             lib/jaxb-api_2.1.jar.
             lib/jaxb-impl_2.1.6.jar.
             lib/jaxb-xjc_2.1.6.jar.
             lib/cxf_2.1.jar.


=================================================
openadaptor3 production 3.4.1 Release Notes

See licence.txt for Licence information.
=================================================

Date: 17th April 2008
Author: openadaptor Core Team

openadaptor 3.4.1
=======

 Summary
 =======
 
 This release focuses on minor cleanup of the codebase & examples as well as some specific 
 changes as outlined below.
 

Processors
==========
